test(e2e): give forge and neoforge above-floor jvm coverage
Booting a version on a JVM newer than its floor was a Fabric and Quilt
privilege. Of the 59 above-floor combinations the full grid proved on run
32489871115, Forge contributed two that fell out by accident — 1.20.4's legacy
jar riding the java-21 job, and eventbus7's java-21 bytecode on the 26.x era's
java 25 — and NeoForge contributed none at all. Every NeoForge leg ran at
exactly its floor, so a NeoForge user on Minecraft 1.21.1 with Java 25 was
running a combination CI had never booted, on any event.

The generator said so on purpose: forward-JVM coverage rows "are a Fabric-jar
concept and must not be reused with LOADER=forge". That is right about
bytecode, which binds downward — a java-21 jar cannot fail to link on java 26 —
but bytecode is not the only thing a newer JVM changes. This project has the
scar: Forge 35.x cannot boot a stock current JDK 8 at all, because 8u321+ added
a parameter to an internal sun.security.util.ManifestEntryVerifier constructor
that 2020-era ModLauncher links against, and CI only survives it via an
install-time ModLauncher 8.1.3 drop-in (docs/version-matrix.md). A forward-JVM
failure with no mod and no bytecode question in it, on the loader that had no
forward-JVM row.

So the claim is narrowed rather than copied. The Fabric pattern — a whole band
re-run one JVM up — still does not apply, because it samples a jar family whose
bytecode floor varies per Minecraft version, which is not how the Forge jars are
cut. What each mapping/EventBus era gets instead is exactly one above-floor data
point:

  forge_java26    ["26.2"]           the eventbus7 band's ceiling on java 26
  neo_fwd_java25  ["1.21.1"]         the band jar's interior line, java-21
                                     floor, booted on java 25

Both rows run on every event, and each output gets its caller job in ci.yml
(e2e-forge-java26, e2e-neoforge-fwd-java25). Measured against this branch's
parent rather than mai